package com.aitherapist.aitherapist;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;


/**
 * AitherapistApplication - main class.
 * Сall spring system
 */
@SpringBootApplication
public class AitherapistApplication {

	public static void main(String[] args) {
		SpringApplication.run(AitherapistApplication.class, args);
	}

}
