package com.aitherapist.aitherapist.db;

/**
 * Main interface. Connector DataBase and TelegramBotService.
 */
public interface IUserRepository {
    public String getDataToUser();

}
