package com.aitherapist.aitherapist.telegrambot;

import lombok.RequiredArgsConstructor;
import lombok.extern.slf4j.Slf4j;
import org.springframework.context.event.ContextRefreshedEvent;
import org.springframework.context.event.EventListener;
import org.springframework.stereotype.Component;
import org.telegram.telegrambots.meta.TelegramBotsApi;
import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
import org.telegram.telegrambots.updatesreceivers.DefaultBotSession;


/**
 * BotInitializer - initianal class TelegramBotService
 */
@Component
@Slf4j
@RequiredArgsConstructor
public class BotInitializer {
    private final TelegramBotService bot;

    @EventListener({ContextRefreshedEvent.class})
    public void init() {
        try {
            new TelegramBotsApi(DefaultBotSession.class).registerBot(bot);
        } catch (TelegramApiException e) {
            log.error("Bot registration failed", e);
        }
    }

}